[Fixing a bug with horizontal scrolling in 'Features.tsx']

--- a/src/app/(Pages)/home/components/features/styles/Features.module.scss
+++ b/src/app/(Pages)/home/components/features/styles/Features.module.scss
@@ -2,7 +2,5 @@
     .container {
         width: min(100% - 40px, 1120px);
         margin-inline: auto;
-        .wrapper {
-        }
     }
 }
